<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent" xmlns:app="http://schemas.android.com/apk/res-auto"
                tools:context=".Fragments.LoginFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_centerInParent="true"
                android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputLayout android:layout_width="match_parent"
                                                                   android:id="@+id/til1"
                                                                   android:background="@drawable/edit_text_view"
                                                                   android:layout_marginTop="16dp"
                                                                   app:layout_constraintStart_toStartOf="parent"
                                                                   app:layout_constraintEnd_toEndOf="parent"
                                                                   android:layout_marginLeft="24dp" android:layout_marginStart="24dp" android:layout_marginEnd="24dp"
                                                                   android:layout_marginRight="24dp" app:layout_constraintTop_toTopOf="parent"
                                                                   android:layout_height="wrap_content">

            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:hint="@string/email"
                    android:background="@null"
                    android:padding="8dp"
                    android:ems="10"
                    android:id="@+id/login_email" />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout android:layout_width="match_parent"
                                                                   android:layout_height="wrap_content"
                                                                   android:layout_marginTop="16dp"
                                                                   android:id="@+id/til2"
                                                                   android:background="@drawable/edit_text_view"
                                                                   app:layout_constraintTop_toBottomOf="@+id/til1" app:layout_constraintStart_toStartOf="parent"
                                                                   app:layout_constraintEnd_toEndOf="parent"
                                                                   android:layout_marginLeft="24dp" android:layout_marginStart="24dp" android:layout_marginEnd="24dp"
                                                                   android:layout_marginRight="24dp"
            >


            <EditText
                    android:layout_width="match_parent"
                    android:background="@null"
                    android:padding="8dp"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:ems="10"
                    android:hint="@string/password"
                    android:id="@+id/login_password" />
            </com.google.android.material.textfield.TextInputLayout>
            <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/login_radio"
                    android:layout_marginTop="16dp"
                    app:layout_constraintTop_toBottomOf="@+id/til2" app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent">
                <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/radio_bidder_login"
                        android:text="@string/bidder"
                />
                <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/radio_auctioner_login"
                        android:text="@string/auctioner"/>
            </RadioGroup>
            <Button
                    android:text="@string/log_in"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/signin_btn"
                    app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="24dp"
                    android:layout_marginRight="24dp"
                    android:layout_marginTop="24dp" app:layout_constraintTop_toBottomOf="@+id/login_radio"/>
            <TextView
                    android:id="@+id/goto_register"
                    android:text="@string/new_tto"
                    android:layout_width="match_parent" android:layout_height="wrap_content"
                    android:layout_marginTop="19dp"
                    app:layout_constraintTop_toBottomOf="@+id/signin_btn" app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </RelativeLayout>