<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:padding="5dp"
                android:layout_height="match_parent">
    <androidx.cardview.widget.CardView android:layout_width="match_parent"
                                       android:layout_height="wrap_content">
        <RelativeLayout android:layout_width="match_parent" android:layout_height="match_parent">
        <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/bidder_image_row"
                android:layout_marginBottom="20dp"
                android:layout_width="60dp" android:layout_height="60dp"/>
        <TextView
                android:id="@+id/bidder_name_row"
                android:layout_width="wrap_content"
                android:layout_toRightOf="@id/bidder_image_row"
                android:layout_marginLeft="10dp"
                android:layout_height="wrap_content"/>
        <TextView
                android:id="@+id/bidder_bidAmount_row"
                android:layout_toRightOf="@id/bidder_image_row"
                android:layout_marginLeft="10dp"
                android:layout_below="@id/bidder_name_row"
                android:layout_width="wrap_content" android:layout_height="wrap_content"/>
        <TextView
                android:id="@+id/assurance_auctioner"
                android:layout_below="@id/bidder_image_row"
                android:layout_width="wrap_content" android:layout_height="wrap_content"/>
        <Button
                android:id="@+id/accept_bid_btn"
                android:layout_alignParentEnd="true"
                android:layout_marginRight="5dp"
                android:layout_marginTop="5dp"
                android:text="@string/accept_bid"
                android:layout_width="wrap_content" android:layout_height="wrap_content"
                android:layout_alignParentRight="true"/>
            <Button
                    android:id="@+id/accepted_bid_btn"
                    android:layout_alignParentEnd="true"
                    android:layout_marginRight="5dp"
                    android:layout_marginTop="5dp"
                    android:background="@null"
                    android:text="@string/accepted"
                    android:layout_width="wrap_content" android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"/>
            <Button
                    android:text="@string/contact"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toLeftOf="@id/accept_bid_btn"
                    android:id="@+id/contact_bidder"/>
        </RelativeLayout>
    </androidx.cardview.widget.CardView>
</RelativeLayout>