<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context=".Fragments.auctionerDetailsFragment">
    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/comapny_name"
            android:id="@+id/company_name" app:layout_constraintEnd_toStartOf="@+id/rank_auctioner"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="24dp"
            app:layout_constraintHorizontal_bias="0.0" android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp" android:layout_marginRight="16dp" android:layout_marginEnd="16dp"/>
    <TextView
            android:text="@string/designation_rank"
            android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:id="@+id/textView5" app:layout_constraintTop_toBottomOf="@+id/about_company"
            android:layout_marginTop="16dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"/>
    <Spinner
            android:id="@+id/rank_auctioner"
            android:layout_width="match_parent" android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView5" android:layout_marginTop="24dp"/>

    <EditText
            android:inputType="textMultiLine"
            android:lines="3"
            android:hint="@string/about_company"
            android:layout_width="match_parent" android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" android:id="@+id/about_company" android:layout_marginTop="28dp"
            app:layout_constraintTop_toBottomOf="@+id/company_name"/>
    <Button
            android:text="Update"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/submit_btn" android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/rank_auctioner" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="32dp" android:layout_marginRight="32dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>