<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:background="@color/backgroud_app_color"
             android:layout_width="match_parent"
             android:layout_height="match_parent" xmlns:app="http://schemas.android.com/apk/res-auto"
             tools:context=".Fragments.RegisterFragment">

    <androidx.constraintlayout.widget.ConstraintLayout android:layout_width="match_parent"
                                                       android:layout_height="match_parent">
        <RelativeLayout android:layout_width="wrap_content"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        android:id="@+id/relative"
                        android:layout_marginTop="8dp"
                        android:layout_height="wrap_content">
            <de.hdodenhof.circleimageview.CircleImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:id="@+id/register_img"
                    android:background="@drawable/image_view_draw"
                    android:src="@drawable/ic_person_black_24dp"/>
            <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/camera"
                    android:src="@drawable/camera_new"
                    android:layout_alignLeft="@id/register_img"
                    android:layout_alignTop="@id/register_img"
                    android:layout_marginTop="70dp"
                    android:layout_marginLeft="70dp"
                    android:layout_width="32dp"
                    android:layout_height="32dp"/>
        </RelativeLayout>
        <com.google.android.material.textfield.TextInputLayout
                android:layout_marginTop="8dp"
                android:background="@drawable/edit_text_view"
                android:id="@+id/input1"
                app:layout_constraintTop_toBottomOf="@+id/relative" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginLeft="24dp" android:layout_marginStart="24dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="24dp" android:layout_marginRight="24dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <!--style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"-->

            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:hint="@string/register_name"
                    android:background="@null"
                    android:padding="10dp"
                    android:ems="10"
                    android:id="@+id/register_name"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
                android:layout_marginTop="8dp"
                android:id="@+id/tbl2"
                app:layout_constraintTop_toBottomOf="@+id/tab3" app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:background="@drawable/edit_text_view"
                android:layout_marginLeft="24dp" android:layout_marginStart="24dp" android:layout_marginEnd="24dp"
                android:layout_marginRight="24dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:padding="10dp"
                    android:inputType="textPassword"
                    android:ems="10"
                    android:id="@+id/password"
                    android:hint="@string/password"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:layout_marginTop="8dp"
                android:background="@drawable/edit_text_view"
                android:id="@+id/tab2"
                app:layout_constraintTop_toBottomOf="@+id/tbl2"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginLeft="24dp" android:layout_marginStart="24dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="24dp" android:layout_marginRight="24dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/confirm_password"
                    android:background="@null"
                    android:padding="10dp"
                    android:inputType="textPassword"
                    android:ems="10"
                    android:id="@+id/confirm_password"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:layout_marginTop="8dp"
                android:background="@drawable/edit_text_view"
                android:id="@+id/tab3"
                app:layout_constraintTop_toBottomOf="@+id/input1" app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginLeft="24dp" android:layout_marginStart="24dp" android:layout_marginEnd="24dp"
                android:layout_marginRight="24dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:hint="@string/email"
                    android:ems="10"
                    android:background="@null"
                    android:padding="10dp"
                    android:id="@+id/register_email"/>
        </com.google.android.material.textfield.TextInputLayout>
        <RadioGroup
                android:layout_width="wrap_content"
                android:padding="10dp"
                android:orientation="horizontal"
                android:layout_height="wrap_content"
                android:id="@+id/register_radio"
                android:contentDescription="Profile"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/tab2"
                android:layout_marginLeft="24dp" android:layout_marginStart="24dp">
            <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/radio_bidder"
                    android:layout_marginRight="10dp"
                    android:text="@string/bidder"
            />
            <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/radio_auctioner"
                    android:text="@string/auctioner"
            />
        </RadioGroup>
        <Button
                android:text="@string/create"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/button_color"
                android:textColor="@color/transparent"
                android:id="@+id/register_btn"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="32dp"
                android:layout_marginRight="32dp"
                app:layout_constraintTop_toBottomOf="@+id/register_radio"/>
        <TextView
                android:layout_width="match_parent"
                android:id="@+id/goto_login"
                android:textColor="@color/colorAccent"
                android:layout_height="wrap_content"

                android:text="Already have an account? Log In here"
                app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/register_btn" android:layout_marginTop="8dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>