<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Fragments.post_itemFragment">
    <Spinner
            android:layout_width="wrap_content"
            android:id="@+id/spinner_itemBrand"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/item_image_bidder_view"
            app:layout_constraintEnd_toEndOf="parent"
    />
    <TextView android:text="@string/brand"
              android:layout_width="wrap_content" android:layout_height="wrap_content"
              android:id="@+id/textView4"
              android:layout_marginTop="16dp"
              app:layout_constraintTop_toBottomOf="@+id/item_image_bidder_view"
              app:layout_constraintEnd_toStartOf="@+id/spinner_itemBrand" android:layout_marginEnd="8dp"
              android:layout_marginRight="8dp"/>
    <Spinner
            android:layout_width="wrap_content"
            android:id="@+id/spinner_itemName"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@+id/textView3" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            app:layout_constraintTop_toBottomOf="@+id/spinner_itemCategory" android:layout_marginTop="16dp"/>
    <TextView android:text="@string/category_item"
              android:layout_width="wrap_content" android:layout_height="wrap_content"
              app:layout_constraintStart_toStartOf="parent"
              android:id="@+id/textView2" android:layout_marginLeft="8dp"
              android:layout_marginStart="8dp" android:layout_marginTop="16dp"
              app:layout_constraintTop_toBottomOf="@+id/item_image_bidder_view"/>
    <Spinner
            android:layout_width="wrap_content"
            android:id="@+id/spinner_itemCategory"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@+id/textView2" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/item_image_bidder_view"/>
    <TextView
            android:text=" Item Name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView3" app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/spinner_itemCategory"/>
    <ImageView
            android:layout_width="200dp"
            android:layout_height="150dp" android:src="@drawable/dummy_itm_image"
            android:id="@+id/item_image_bidder_view" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lines="3"
            android:hint="@string/description"
            android:inputType="textMultiLine"
            android:gravity="start|top"
            android:ems="10"
            android:id="@+id/item_description" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/spinner_itemName" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:text="0"
            android:hint="Min Bid Amount"
            android:ems="10"
            android:id="@+id/min_bid" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/item_description"
            app:layout_constraintStart_toEndOf="@+id/textView6" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"/>
    <ImageButton
            android:layout_width="30dp"
            android:layout_height="30dp" tools:src="@tools:sample/avatars"
            android:id="@+id/time_opener"
            android:layout_marginTop="8dp"
            android:src="@drawable/ic_date_range_black_24dp"
            app:layout_constraintTop_toBottomOf="@+id/min_bid"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginRight="16dp" android:layout_marginEnd="16dp"/>
    <Button
            android:text="Post Item"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/post_item_btn" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/time_opener"/>
    <TextView
            android:text="@string/end_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/time_last"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="16dp" android:layout_marginStart="16dp"
            app:layout_constraintTop_toBottomOf="@+id/min_bid" android:layout_marginTop="16dp"/>
    <TextView
            android:text="Min Bid Amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView6" app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/item_description"/>

</androidx.constraintlayout.widget.ConstraintLayout>